--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
-  "homepage": "https://adanfr.com"
+  "homepage": "http://afr2903.github.io/adanfr"
 }
