--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://afr2903.github.io/adanfr",
   "name": "simone-personal-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -50,6 +51,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-  },
-  "homepage": "http://afr2903.github.io/adanfr"
+  }
 }
