[fix]: custom domain for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://afr2903.github.io/adanfr",
+  "homepage": "https://adanfr.com",
   "name": "simone-personal-portfolio",
   "version": "0.1.0",
   "private": true,
