--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "html2pdf.js": "^0.12.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^7.0.0",
     "next": "15.2.8",
     "next-themes": "^0.4.4",
     "path": "latest",
